Fixed bug which resulted in the setting of the wrong chunk priority when not all files of a torrent were selected. This resulted in the torrent being at 100 %, while not all files where at 100 %.

BUG: 137840


svn path=/trunk/extragear/network/ktorrent/; revision=607622